basic html and css settings

--- a/index.html
+++ b/index.html
@@ -4,14 +4,49 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equip="X-UA-Compatible" content="IE-edge">
-        <link rel="stylesheet" href="stylesheet">
+        <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <title>Vranovici</title>
     </head>
     <body>
         <div las="banner">
+            <div class="overlay">
+                <div class="navbar">
+                    <div class="logo">
+                        <img src="#">
+                    </div>
+                </div>
+                <div class="menu-icons">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                </div>
+            </div>
             <div class="slider">
-                <img src="images/img.jpg" alt="photo1" id="slideImg">
+                <img src="images/img1.jpg" alt="photo1" id="slideImg">
+            </div>
+            <div class="overlay">
+                <div class="navbar">
+                    <div class="logo">
+                        <img src="#">
+                    </div>
+                    <div class="menu-icons">
+                        <img src="#">
+                        <img src="#">
+                        <img src="#">
+                    </div>
+                </div>
+                <div class="content">
+                    <h1>Lorem ipsum dolor sit.</h1>
+                    <h3>
+                        Lorem, ipsum dolor sit amet consectetur 
+                        adipisicing elit. Illo, perspiciatis!
+                    </h3>
+                    <div>
+                        <button type="button">WATCH MORE</button>
+                        <button type="button">SUBSCRIBE</button>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
